--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/RF.DEFAULT" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".Activities.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/RF.DEFAULT">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
