--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.koushikdutta.ion:ion:2.+'
     compile project(':slidingmenu')
     compile project(':redditLib')
 }
